# LiteFM

./: #lfm.c#  .clang-format  .gitignore  AVL_tree.h  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  archivecontrol.h  build.sh  clipboard.h  cursesutils.h  dircontrol.h  filePreview.h  filepreview.h  lfm.c  meson.build  signalhandling.h
.github/workflows/: codeql.yml
CHANGELOG/: v1_0.md  v1_1.md  v1_2.md  v1_3.md  v1_4.md  v1_5.md  v1_6.md  v1_7.md  v1_8.md  v1_9.md  v2_0.md  v2_1.md  v2_2.md  v2_3.md  v2_4.md  v2_5.md  v2_6.md  v2_7.md  v2_7_1.md  v2_7_2.md  v2_8.md  v2_9.md  v2_9_1.md
benchmarks/: run_benchmark.sh
components/: litefm.1
debug/: CMakeLists.txt  meson.build
include/: archivecontrol.h  arg_helpers.h  clipboard.h  cursesutils.h  dircontrol.h  filepreview.h  hashtable.h  highlight.h  inodeinfo.h  kbinput.h  logging.h  musicpreview.h  signalhandling.h  structs.h  syntax.h  systeminfo.h
keywords/: c-keywords.yaml  css-keywords.yaml  html-keywords.yaml  java-keywords.yaml  js-keywords.yaml  json-keywords.yaml  py-keywords.yaml  sh-keywords.yaml
src/: AVL_tree.c  archivecontrol.c  arg_helpers.c  clipboard.c  cursesHelpers.c  cursesutils.c  dircontrol.c  filePreview.c  filepreview.c  getFreeSpace.c  hashtable.c  helpers.c  highlight.c  inodeinfo.c  kbinput.c  logging.c  musicpreview.c  signalhandling.c  syntax.c
